# promptserve

./: AGENTS.md  README.md  UIMOCKUP.html  main.py  pyproject.toml
config/: camera_arm.yaml  workspace.yaml
demos/: README.md  __init__.py  orbbec_depth_check.py  piper_arm_only.py  piper_chat_agent.py  piper_check_usb.py  piper_move_joint.py  piper_teach_demo.py  record_playback.py  snap_debug.py  speak.py  speak_agent.py  tts_speak.py  vlm_detect_test.py  vlm_device_check.py  vlm_move.py  webcam_capture.py  yolo_download.py
demos/recordings/: ketchup_demo.yaml  smore_demo.yaml  water_demo.yaml
docs/superpowers/specs/: 2026-05-23-voice-robot-arm-design.md
frontend/: README.md  nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.config.ts
frontend/app/assets/css/: main.css
frontend/app/layouts/: default.vue
frontend/app/pages/: index.vue
frontend/app/types/: events.ts
scripts/: README.md  install_pyorbbecsdk.sh  piper_arm.sh  piper_chat_agent.sh  piper_demo_ketchup.sh  piper_demo_smore.sh  piper_demo_water.sh  piper_dino_xy.sh  piper_init_sequence.sh  piper_play_adapt.sh  piper_play_bits.sh  piper_play_bits_adapt.sh  piper_play_bits_xy.sh  piper_play_demo.sh  piper_record_bit.sh  piper_record_demo.sh  snap_debug.sh  speak.sh  speak_agent.sh  vlm_move.sh
tests/: conftest.py  test_config.py
tests/arm/: test_piper_ik.py  test_workspace_clamp.py
tests/perception/: test_frames.py  test_webcam_camera.py
tests/vision/: test_detection_backend.py  test_detector.py  test_device.py  test_grounding_dino_detector.py  test_ollama_client.py  test_yolo_detector.py  test_yolo_prepare.py
tts-utils/: pyproject.toml
tts-utils/src/tts_utils/: __init__.py  synthesize.py  system_audio.py
web/: package.json
