[project]
name = "hackstorm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tts-utils",
    "transformers>=4.52.0",
    "timm>=1.0.0",
    "torch>=2.6.0",
    "accelerate>=1.4.0",
    "pillow>=11.0.0",
    "opencv-python-headless>=4.10.0.0",
    "ultralytics>=8.3.0",
    "clip",
    "piper-sdk>=0.6.1",
    "torchvision>=0.27.0",
    "numpy>=2.0.0",
    "pyyaml>=6.0.0",
    "ollama>=0.6.2",
    "httpx>=0.27.0",
    "strands-agents[openai]>=1.41.0",
    "kokoro>=0.9.4",
    "soundfile>=0.13.1",
]

[project.optional-dependencies]
# pyorbbecsdk: install manually on Ubuntu (cp311 wheel); stub mode when import fails.
serve = [
    "strands-agents",
    "faster-whisper",
    "silero-vad",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "sounddevice>=0.5.0",
    "numpy",
    "pyyaml",
    "bitsandbytes",
]
dev = ["pytest>=8.0.0", "pytest-asyncio", "httpx"]

[tool.uv.sources]
tts-utils = { workspace = true }
clip = { git = "https://github.com/ultralytics/CLIP.git" }

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    "tts-utils",
]

[project.scripts]
hackstorm-tts-demo = "demos.tts_speak:main"
hackstorm-record-demo = "demos.record_playback:main"
hackstorm-piper-demo = "demos.piper_move_joint:main"
hackstorm-piper-arm = "demos.piper_arm_only:main"
hackstorm-piper-teach = "demos.piper_teach_demo:main"
hackstorm-webcam-capture = "demos.webcam_capture:main"
hackstorm-vlm-check = "demos.vlm_device_check:main"
hackstorm-vlm-detect-test = "demos.vlm_detect_test:main"
hackstorm-vlm-move = "demos.vlm_move:main"
hackstorm-yolo-download = "demos.yolo_download:main"
hackstorm-piper-check-usb = "demos.piper_check_usb:main"
hackstorm-grab-box = "grab_box:main"
hackstorm-piper-chat = "demos.piper_chat_agent:main"
hackstorm-serve = "hackstorm.core.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["demos", "src/hackstorm"]

[tool.hatch.build.targets.wheel.force-include]
"src/grab_box.py" = "grab_box.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "gpu: requires GPU and Gemma model weights (deselect with -m 'not gpu')",
]
